--- a/satelis_tes.ipynb
+++ b/satelis_tes.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "band1 = gdal.Open(r'LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B1.tif')"
+    "band1 = gdal.Open(r'../LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B1.tif')"
    ]
   },
   {
@@ -31,7 +31,7 @@
     {
      "data": {
       "text/plain": [
-       "<osgeo.gdal.Dataset; proxy of <Swig Object of type 'GDALDatasetShadow *' at 0x000001B185EACC30> >"
+       "<osgeo.gdal.Dataset; proxy of <Swig Object of type 'GDALDatasetShadow *' at 0x000001A0E93CC5A0> >"
       ]
      },
      "execution_count": 3,
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "band2 = gdal.Open(r'LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B2.tif')"
+    "band2 = gdal.Open(r'../LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B2.tif')"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "band3 = gdal.Open(r'LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B3.tif')"
+    "band3 = gdal.Open(r'../LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B3.tif')"
    ]
   },
   {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -210,18 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "band1 = gdal.Open(r'../LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B1.tif')\n",
-    "band2 = gdal.Open(r'LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B2.tif')\n",
-    "band3 = gdal.Open(r'LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B3.tif')"
+    "band2 = gdal.Open(r'../LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B2.tif')\n",
+    "band3 = gdal.Open(r'../LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B3.tif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -259,37 +259,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "band4 = gdal.Open(r'LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B4.tif')\n",
-    "band5 = gdal.Open(r'LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B5.tif')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "red_values = band4.ReadAsArray() / 10000\n",
-    "nir_values = band5.ReadAsArray() / 10000"
+    "## NDVI Calculation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "band4 = gdal.Open(r'../LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B4.tif')\n",
+    "band5 = gdal.Open(r'../LC09_L2SP_113063_20220608_20220610_02_T1/LC09_L2SP_113063_20220608_20220610_02_T1_SR_B5.tif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "red_values = band4.ReadAsArray() / 10000\n",
+    "nir_values = band5.ReadAsArray() / 10000\n",
+    "green_values = band3.ReadAsArray() / 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
+       "{'divide': 'ignore', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,14 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_14424\\2688554738.py:1: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_12632\\2688554738.py:1: RuntimeWarning: invalid value encountered in true_divide\n",
       "  ndvi = (nir_values - red_values) / (nir_values + red_values)\n"
      ]
     }
@@ -319,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -357,11 +365,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## NDWI Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_12632\\1226437154.py:1: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  ndwi = (green_values - nir_values) / (green_values + nir_values)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ndwi = (green_values - nir_values) / (green_values + nir_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NDWI matrix: \n",
+      "[[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n",
+      "\n",
+      "Max NDWI: 1.0\n",
+      "\n",
+      "Mean NDWI: -0.09602920817076928\n",
+      "\n",
+      "Median NDWI: 0.0\n",
+      "\n",
+      "Min NDWI: -1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ndwi[np.isnan(ndwi)] = 0\n",
+    "print('NDWI matrix: ')\n",
+    "print(ndwi)\n",
+    "\n",
+    "print('\\nMax NDWI: {m}'.format(m=ndwi.max()))\n",
+    "print('\\nMean NDWI: {m}'.format(m=ndwi.mean()))\n",
+    "print('\\nMedian NDWI: {m}'.format(m=np.median(ndwi)))\n",
+    "print('\\nMin NDWI: {m}'.format(m=ndwi.min()))"
+   ]
   },
   {
    "cell_type": "markdown",
